--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+button {
+  padding: 15px;
+  background-color: #0050c2;
+  font-size: 25px;
+  color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 0 0 0;
+}
